[gd_scene load_steps=10 format=2]

[ext_resource path="res://stuff/agent/agent.gd" type="Script" id=1]
[ext_resource path="res://stuff/agent/brain.tscn" type="PackedScene" id=2]
[ext_resource path="res://stuff/agent/simple_agent_cicrcle.png" type="Texture" id=3]
[ext_resource path="res://stuff/agent/legs.tscn" type="PackedScene" id=4]
[ext_resource path="res://stuff/agent/torso.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=9]
radius = 14.0357

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.181818 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=6]
radius = 454.981

[sub_resource type="CircleShape2D" id=7]
radius = 28.0713

[node name="Agent" type="Path2D"]
curve = null
script = ExtResource( 1 )

[node name="Legs" parent="." instance=ExtResource( 4 )]
torso_goes_here = NodePath("../Torso")

[node name="Torso" type="RigidBody2D" parent="."]
collision_layer = 8
collision_mask = 24
mode = 2
contacts_reported = 1
contact_monitor = true
can_sleep = false
script = ExtResource( 5 )

[node name="Brain" parent="Torso" instance=ExtResource( 2 )]

[node name="Icon" type="Sprite" parent="Torso"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torso"]
shape = SubResource( 9 )

[node name="Eyes" type="Area2D" parent="Torso"]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Torso/Eyes"]
rotation = -1.5708
polygon = PoolVector2Array( -154, -449, -34, 0, 34, 0, 119, -450 )

[node name="Line2D" type="Line2D" parent="Torso/Eyes"]
points = PoolVector2Array( -300, 0, 0, 0 )
width = 100.0
width_curve = SubResource( 8 )
default_color = Color( 0.870588, 0.294118, 0.164706, 0.219608 )

[node name="Ears" type="Area2D" parent="Torso"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torso/Ears"]
shape = SubResource( 6 )

[node name="ItemGrabber" type="Area2D" parent="Torso"]
visible = false
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torso/ItemGrabber"]
shape = SubResource( 7 )

[node name="TumbleTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[connection signal="goal_reached" from="Legs" to="." method="_on_Legs_goal_reached"]
[connection signal="tree_exiting" from="Torso" to="." method="_on_Torso_tree_exiting"]
[connection signal="body_entered" from="Torso/Eyes" to="Torso/Brain" method="_on_Eyes_body_entered"]
[connection signal="body_entered" from="Torso/Ears" to="Torso/Brain" method="_on_Ears_body_entered"]
[connection signal="body_entered" from="Torso/ItemGrabber" to="Torso/Brain" method="_on_ItemGrabber_body_entered"]
[connection signal="timeout" from="TumbleTimer" to="." method="un_tumble"]
